feat: implement create message API
